# cie-middleware-linux

./: .gitattributes  .gitignore  Makefile.am  README.md  build-cie-pkcs11.sh  configure.ac
TestCIE/: TestCIE.cpp  UUCByteArray.cpp
cie-pkcs11/: Makefile.am
cie-pkcs11/CSP/: AbilitaCIE.cpp  IAS.cpp  PINManager.cpp
cie-pkcs11/Crypto/: AES.cpp  AES.h  ASNParser.cpp  Base64.cpp  CryptoUtil.h  DES3.cpp  MAC.cpp  RSA.cpp  RSA.h  SHA256.cpp  SHA512.cpp
cie-pkcs11/LOGGER/: Logger.cpp
cie-pkcs11/PCSC/: APDU.cpp  APDU.h  CardLocker.cpp  CardLocker.h  PCSC.h  Token.cpp
cie-pkcs11/PKCS11/: CIEP11Template.cpp  CardContext.cpp  CardTemplate.cpp  Mechanism.cpp  P11Object.cpp  PKCS11Functions.cpp  PKCS11Functions.h  Slot.cpp  Slot.h  cryptoki.h  pkcs11t.h  session.cpp  session.h
cie-pkcs11/Sign/: CIESign.cpp  CIEVerify.cpp
cie-pkcs11/Util/: Array.cpp  CacheLib.cpp  CryptoppUtils.cpp  CryptoppUtils.h  IniSettings.cpp  TLV.cpp  UtilException.cpp  defines.h  funccallinfo.cpp  log.cpp  util.cpp  util.h
