## Automake

@SET_MAKE@

lib_LTLIBRARIES = libcie-pkcs11.la

noinst_HEADERS = CSP/VerificaConCIE.h \
    CSP/FirmaConCIE.h \
    CSP/AbilitaCIE.h \
    CSP/IAS.h \
    CSP/PINManager.h \
    PKCS11/CardContext.h \
    PKCS11/Mechanism.h \
    PKCS11/session.h \
    PKCS11/P11Object.h \
    PKCS11/cryptoki.h \
    PKCS11/pkcs11.h \
    PKCS11/Slot.h \
    PKCS11/CardTemplate.h \
    PKCS11/pkcs11t.h \
    PKCS11/InitP11.h \
    PKCS11/win32.h \
    PKCS11/CIEP11Template.h \
    PKCS11/wintypes.h \
    PKCS11/pkcs11f.h \
    PKCS11/PKCS11Functions.h \
    Util/TLV.h \
    Util/defines.h \
    Util/UtilException.h \
    Util/Array.h \
    Util/funccallinfo.h \
    Util/UUCTextFileReader.h \
    Util/CacheLib.h \
    Util/SyncroMutex.h \
    Util/UUCStringTable.h \
    Util/util.h \
    Util/log.h \
    Util/IniSettings.h \
    Util/CryptoppUtils.h \
    Util/SyncroEvent.h \
    Util/ModuleInfo.h \
    Util/UUCProperties.h \
    Util/UUCByteArray.h \
    keys.h \
    Crypto/AES.h \
    Crypto/DES3.h \
    Crypto/ASNParser.h \
    Crypto/Base64.h \
    Crypto/sha512.h \
    Crypto/sha256.h \
    Crypto/SHA1.h \
    Crypto/CryptoUtil.h \
    Crypto/MD5.h \
    Crypto/RSA.h \
    Crypto/MAC.h \
    LOGGER/Logger.h \
    Cryptopp/pubkey.h \
    Cryptopp/bench.h \
    Cryptopp/filters.h \
    Cryptopp/donna_sse.h \
    Cryptopp/pch.h \
    Cryptopp/vmac.h \
    Cryptopp/default.h \
    Cryptopp/socketft.h \
    Cryptopp/sha3.h \
    Cryptopp/speck.h \
    Cryptopp/mdc.h \
    Cryptopp/mars.h \
    Cryptopp/polynomi.h \
    Cryptopp/zlib.h \
    Cryptopp/mqueue.h \
    Cryptopp/dmac.h \
    Cryptopp/tweetnacl.h \
    Cryptopp/blowfish.h \
    Cryptopp/3way.h \
    Cryptopp/shake.h \
    Cryptopp/aes.h \
    Cryptopp/algparam.h \
    Cryptopp/secblock.h \
    Cryptopp/base32.h \
    Cryptopp/gost.h \
    Cryptopp/wait.h \
    Cryptopp/gf2_32.h \
    Cryptopp/simeck.h \
    Cryptopp/iterhash.h \
    Cryptopp/wake.h \
    Cryptopp/randpool.h \
    Cryptopp/ppc_simd.h \
    Cryptopp/hmqv.h \
    Cryptopp/hex.h \
    Cryptopp/modexppc.h \
    Cryptopp/integer.h \
    Cryptopp/cryptlib.h \
    Cryptopp/donna.h \
    Cryptopp/sm3.h \
    Cryptopp/factory.h \
    Cryptopp/validate.h \
    Cryptopp/cham.h \
    Cryptopp/seal.h \
    Cryptopp/aria.h \
    Cryptopp/nr.h \
    Cryptopp/drbg.h \
    Cryptopp/zdeflate.h \
    Cryptopp/salsa.h \
    Cryptopp/gfpcrypt.h \
    Cryptopp/rc5.h \
    Cryptopp/simon.h \
    Cryptopp/eccrypto.h \
    Cryptopp/hc256.h \
    Cryptopp/cpu.h \
    Cryptopp/luc.h \
    Cryptopp/rabin.h \
    Cryptopp/sm4.h \
    Cryptopp/adv_simd.h \
    Cryptopp/adler32.h \
    Cryptopp/ec2n.h \
    Cryptopp/sha.h \
    Cryptopp/scrypt.h \
    Cryptopp/idea.h \
    Cryptopp/chachapoly.h \
    Cryptopp/pssr.h \
    Cryptopp/ecpoint.h \
    Cryptopp/panama.h \
    Cryptopp/rdrand.h \
    Cryptopp/xtrcrypt.h \
    Cryptopp/argnames.h \
    Cryptopp/blake2.h \
    Cryptopp/dll.h \
    Cryptopp/gzip.h \
    Cryptopp/xed25519.h \
    Cryptopp/tiger.h \
    Cryptopp/fltrimpl.h \
    Cryptopp/md4.h \
    Cryptopp/files.h \
    Cryptopp/hrtimer.h \
    Cryptopp/chacha.h \
    Cryptopp/modarith.h \
    Cryptopp/winpipes.h \
    Cryptopp/sosemanuk.h \
    Cryptopp/arm_simd.h \
    Cryptopp/md2.h \
    Cryptopp/rc2.h \
    Cryptopp/misc.h \
    Cryptopp/seckey.h \
    Cryptopp/channels.h \
    Cryptopp/hashfwd.h \
    Cryptopp/trdlocal.h \
    Cryptopp/trap.h \
    Cryptopp/rsa.h \
    Cryptopp/rng.h \
    Cryptopp/serpentp.h \
    Cryptopp/zinflate.h \
    Cryptopp/rc6.h \
    Cryptopp/basecode.h \
    Cryptopp/fhmqv.h \
    Cryptopp/poly1305.h \
    Cryptopp/ripemd.h \
    Cryptopp/rw.h \
    Cryptopp/keccak.h \
    Cryptopp/nbtheory.h \
    Cryptopp/rabbit.h \
    Cryptopp/serpent.h \
    Cryptopp/authenc.h \
    Cryptopp/threefish.h \
    Cryptopp/cmac.h \
    Cryptopp/gcm.h \
    Cryptopp/seed.h \
    Cryptopp/donna_32.h \
    Cryptopp/xtr.h \
    Cryptopp/camellia.h \
    Cryptopp/mqv.h \
    Cryptopp/oaep.h \
    Cryptopp/resource.h \
    Cryptopp/base64.h \
    Cryptopp/whrlpool.h \
    Cryptopp/modes.h \
    Cryptopp/ecp.h \
    Cryptopp/hight.h \
    Cryptopp/strciphr.h \
    Cryptopp/blumshub.h \
    Cryptopp/lea.h \
    Cryptopp/ttmac.h \
    Cryptopp/emsa2.h \
    Cryptopp/darn.h \
    Cryptopp/oids.h \
    Cryptopp/cbcmac.h \
    Cryptopp/fips140.h \
    Cryptopp/adv-simd.h \
    Cryptopp/des.h \
    Cryptopp/skipjack.h \
    Cryptopp/safer.h \
    Cryptopp/asn.h \
    Cryptopp/lubyrack.h \
    Cryptopp/hc128.h \
    Cryptopp/cast.h \
    Cryptopp/algebra.h \
    Cryptopp/dsa.h \
    Cryptopp/hkdf.h \
    Cryptopp/gf256.h \
    Cryptopp/arc4.h \
    Cryptopp/network.h \
    Cryptopp/mersenne.h \
    Cryptopp/ossig.h \
    Cryptopp/aes_armv4.h \
    Cryptopp/dh.h \
    Cryptopp/donna_64.h \
    Cryptopp/padlkrng.h \
    Cryptopp/pwdbased.h \
    Cryptopp/hmac.h \
    Cryptopp/crc.h \
    Cryptopp/simple.h \
    Cryptopp/osrng.h \
    Cryptopp/twofish.h \
    Cryptopp/stdcpp.h \
    Cryptopp/words.h \
    Cryptopp/config.h \
    Cryptopp/pkcspad.h \
    Cryptopp/eprecomp.h \
    Cryptopp/shacal2.h \
    Cryptopp/kalyna.h \
    Cryptopp/smartptr.h \
    Cryptopp/naclite.h \
    Cryptopp/siphash.h \
    Cryptopp/tea.h \
    Cryptopp/esign.h \
    Cryptopp/shark.h \
    Cryptopp/dh2.h \
    Cryptopp/square.h \
    Cryptopp/md5.h \
    Cryptopp/elgamal.h \
    Cryptopp/ccm.h \
    Cryptopp/gf2n.h \
    Cryptopp/ppc-simd.h \
    Cryptopp/eax.h \
    Cryptopp/trunhash.h \
    Cryptopp/rijndael.h \
    Cryptopp/queue.h \
    Cryptopp/ida.h \
    Sign/CIEVerify.h \
    Sign/CIESign.h \
    Sign/disigonsdk.h \
    Sign/definitions.h \
    Sign/CIEEngine.h \
    PCSC/CardLocker.h \
    PCSC/Token.h \
    PCSC/PCSC.h \
    PCSC/APDU.h


libcie_pkcs11_la_SOURCES = CSP/VerificaConCIE.cpp \
    CSP/FirmaConCIE.cpp \
    CSP/AbilitaCIE.cpp \
    CSP/PINManager.cpp \
    CSP/ExtAuthKey.cpp \
    CSP/IAS.cpp \
    PKCS11/CardContext.cpp \
    PKCS11/Mechanism.cpp \
    PKCS11/CardTemplate.cpp \
    PKCS11/P11Object.cpp \
    PKCS11/initP11.cpp \
    PKCS11/Slot.cpp \
    PKCS11/CIEP11Template.cpp \
    PKCS11/PKCS11Functions.cpp \
    PKCS11/session.cpp \
    Util/Array.cpp \
    Util/UUCStringTable.cpp \
    Util/funccallinfo.cpp \
    Util/UUCTextFileReader.cpp \
    Util/UUCByteArray.cpp \
    Util/util.cpp \
    Util/SyncroMutex.cpp \
    Util/UtilException.cpp \
    Util/ModuleInfo.cpp \
    Util/CacheLib.cpp \
    Util/log.cpp \
    Util/IniSettings.cpp \
    Util/TLV.cpp \
    Util/CryptoppUtils.cpp \
    Util/SyncroEvent.cpp \
    Util/UUCProperties.cpp \
    Crypto/MD5.cpp \
    Crypto/SHA512.cpp \
    Crypto/ASNParser.cpp \
    Crypto/SHA256.cpp \
    Crypto/RSA.cpp \
    Crypto/SHA1.cpp \
    Crypto/DES3.cpp \
    Crypto/AES.cpp \
    Crypto/Base64.cpp \
    Crypto/MAC.cpp \
    LOGGER/Logger.cpp \
    Sign/CIEVerify.cpp \
    Sign/CIESign.cpp \
    PCSC/PCSC.cpp \
    PCSC/Token.cpp \
    PCSC/CardLocker.cpp \
    PCSC/APDU.cpp

libcie_pkcs11_la_CPPFLAGS = @CRPP_INC@ @PCSC_INC@ @XML_INC@ @CRY_INC@ -DDEFINE_CFuncCallInfo

libcie_pkcs11_la_LDFLAGS = @CRPP_PATH@ @PCSC_PATH@ @XML_PATH@ @CRY_PATH@ -shared -pthread

libcie_pkcs11_la_LIBADD = @CRPP_LIB@ @PCSC_LIB@ @XML_LIB@ @CRY_LIB@
